[package]
name = "ttv"
description = "Create train, test and validation sets from text files"
version = "0.4.0"
authors = ["Ben Sully <ben@bsull.io>"]
repository = "https://github.com/sd2k/ttv"
keywords = ["cli", "data", "machine-learning"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
clap = { version = "3.1.15", features = ["derive", "yaml"] }
csv = "1.3.1"
env_logger = "0.11.6"
flate2 = "1.0.35"
indicatif = "0.17.9"
jemallocator = "0.5.4"
log = "0.4.22"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
thiserror = "2.0.9"

[dev-dependencies]
trycmd = "0.15.8"
